--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="bs">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>PROSPER - TOP KLUB</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      text-align: center;
+      background-image: url('top-club-logo.png'); /* zamijeni s pravim imenom slike */
+      background-size: 600px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-blend-mode: soft-light;
+    }
+    .container {
+      padding: 60px 20px;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+      color: #f9a825;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin-bottom: 30px;
+      font-weight: 400;
+    }
+    .cta-buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 15px 25px;
+      font-size: 1em;
+      color: #fff;
+      background-color: #f57c00;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+    .cta-buttons a:hover {
+      background-color: #ef6c00;
+    }
+    .footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>PROSPER - PLATFORMA ZA VIŠE NAMJENA</h1>
+    <h2>Mjesto gdje TOP klub raste, spaja ljude i mijenja živote.</h2>
 
+    <div class="cta-buttons">
+      <a href="https://prospicuc.com/register?invitationCode=MY6821">🤝 PRIDRUŽI SE</a>
+      <a href="https://t.me/jagodica113">📲 Telegram Kontakt</a>
+    </div>
+
+    <h2>☝️ NAPRAVI PROMJENU<br>🍀 POSTANI DIO PRIČE KOJA DONOSI PROSPERITET</h2>
+    <h2>🏆 PROSPER + TOP KLUB 🏆<br>Zajedno smo jači.</h2>
+
+    <div class="footer">
+      Za sve informacije kontaktirajte me privatno.<br>
+      © 2025 PROSPER | TOP KLUB
+    </div>
+  </div>
+</body>
+</html>
