--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <div class="cta-buttons">
       <a href="https://prospicuc.com/register?invitationCode=MY6821" class="join-button">Join Now!</a>
+    </div>
+
+    <div class="cta-buttons">
       <a href="https://t.me/jagodica113" class="telegram-button">
         <img src="telegram-icon.png" alt="Telegram" class="telegram-icon"> Telegram Kontakt
       </a>
