--- a/index.html
+++ b/index.html
@@ -31,17 +31,28 @@
                 </div>
             </div>
 
-            <!-- CTA Buttons - SADA NA DNU -->
-            <div class="button-group">
-                <a href="https://prospicuc.com/register?invitationCode=MY6821" class="btn btn-primary">
-                    🚀 PRIDRUŽI SE
-                </a>
-                <a href="https://prospicuc.com/register?invitationCode=MY6821" class="btn btn-secondary">
-                    💫 NAPRAVI PROMJENU
-                </a>
-                <a href="https://t.me/jagodica113" class="btn btn-telegram" target="_blank">
-                    📱 POSTANI DIO PRIČE
-                </a>
+            <!-- Primjeri kako treba da izgledaju tvoji linkovi: -->
+
+<a href="https://prospicuc.com/register?invitationCode=MY6821" 
+   target="_blank" 
+   rel="noopener" 
+   class="btn btn-primary">
+    🚀 PRIDRUŽI SE
+</a>
+
+<a href="https://prospicuc.com/register?invitationCode=MY6821" 
+   target="_blank" 
+   rel="noopener" 
+   class="btn btn-secondary">
+    💫 NAPRAVI PROMJENU
+</a>
+
+<a href="https://t.me/jagodica113" 
+   target="_blank" 
+   rel="noopener" 
+   class="btn btn-telegram">
+    📱 POSTANI DIO PRIČE
+</a>
             </div>
         </main>
     </div>
