--- a/index.html
+++ b/index.html
@@ -31,28 +31,21 @@
                 </div>
             </div>
 
-            <!-- Primjeri kako treba da izgledaju tvoji linkovi: -->
-
-<a href="https://prospicuc.com/register?invitationCode=MY6821" 
-   target="_blank" 
-   rel="noopener" 
-   class="btn btn-primary">
-    🚀 PRIDRUŽI SE
-</a>
-y">
-<a href="https://prospicuc.com/register?invitationCode=MY6821" 
-   target="_blank" 
-   rel="noopener" 
-   class="btn btn-secondary">
-    💫 NAPRAVI PROMJENU
-</a>
-
-<a href="https://t.me/jagodica113" 
-   target="_blank" 
-   rel="noopener" 
-   class="btn btn-telegram">
-    📱 POSTANI DIO PRIČE
-</a>
+           <!-- CTA Buttons - SADA NA DNU -->
+<div class="button-group">
+    <a href="https://prospicuc.com/register?invitationCode=MY6821" 
+       target="_blank" 
+       rel="noopener" 
+       class="btn btn-primary">
+        🚀 PRIDRUŽI SE
+    </a>
+    <a href="https://t.me/jagodica113" 
+       target="_blank" 
+       rel="noopener" 
+       class="btn btn-telegram">
+        📱 KONTAKT NA TELEGRAMU
+    </a>
+</div>
             </div>
         </main>
     </div>
